--- a/index.html
+++ b/index.html
@@ -1,38 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Hello MF</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
 
-    <div id = "box1"></div>
-    <div id = "box2"></div>
+    <div id="box1"></div>
+    <div id="box2"></div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis error, tempore aliquam tenetur ab ut iure eius
+        saepe et vero quisquam dolore corporis deleniti reprehenderit? Dolorum saepe quam minima necessitatibus.</p>
 
 </body>
+
 </html>
